--- a/styles/ui.css
+++ b/styles/ui.css
@@ -36,7 +36,7 @@
 
 .text {
   font-family: 'OpenSans-Light';
-  font-size: 20px;
+  font-size: 18px;
   font-weight: normal;
   text-align: center;
 }
@@ -61,4 +61,27 @@
   font-family: 'OpenSans-Light';
   font-weight: normal;
   font-size: 18px;
+}
+
+button {
+  font-family: 'OpenSans';
+  font-style: normal;
+  border: none;
+  color: rgb(255, 255, 255);
+  background-color: blueviolet; /* Green */
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 250ms;
+  user-select: none;
+}
+
+button:hover {
+  transition: 250ms;
+  background-color: rgb(100, 50, 168);
 }
