--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -2,23 +2,144 @@
   Index page stylesheet.
 */
 
+.navigation {
+  margin-top: 20px;
+  background-color: transparent;
+}
+
+.navigation-logo {
+  margin-left: 50px;
+}
+
+.navigation #navigation-links {
+  margin-left: 40px;
+}
+
+.navigation #navigation-links a {
+  border-radius: 200px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  font-family: 'OpenSans';
+  font-size: 20px;
+  /*color: rgb(174, 0, 255);*/
+  color: rgb(150, 62, 233)
+}
+
+.navigation #navigation-links a:hover {
+  background-color: rebeccapurple;
+  color: rgb(255, 255, 255);
+}
+
 #startup-panel {
   color: rgb(196, 138, 255);
-  background-color: rgb(30, 30, 30);
+  background-color: transparent;
+  /*background-color: rgb(30, 30, 30);*/
   display: flex;
   /*position: absolute;*/
   width: 100%;
   padding-bottom: 80px;
   left: 0px;
   right: 0px;
+  height: 450px;
   z-index: 1;
 }
 
+#startup-background-image {
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 580px;
+}
+
 .startup-panel-content {
-  margin-top: 80px;
-  margin-left: 10%;
+  color: rgb(174, 0, 255);
+  margin-top: 50px;
+  margin-left: 50px;
   margin-right: 10%;
-  font-family: 'OpenSans-Light';
+  font-family: 'OpenSans-SemiBold';
   font-size: 30px;
   font-weight: normal;
+}
+
+#navigate-logo {
+  width: 250px;
+  height: 250px;
+  margin: auto;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  margin-top: 455px;
+  z-index: 1000000000000000000000;
+}
+
+.navigate-link {
+  font-family: 'OpenSans';
+  font-weight: bolder;
+  font-size: larger;
+  border-radius: 100000000000000000000px;
+  position: absolute;
+  width: 250px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
+  user-select: none;
+  text-align: center;
+  top: 0px;
+  margin-top: 550px;
+  background-color: rebeccapurple;
+  border-radius: 100000000000000px;
+  z-index: 1000000000;
+  transition: 250ms;
+}
+
+.navigate-link:hover {
+  transition: 250ms;
+  background-color: rgb(174, 0, 255);
+  cursor: pointer;
+}
+
+.navigate-link a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+.navigate-shadow {
+  background-color: rgba(137, 0, 201, 1);
+  position: absolute;
+  top: 0px;
+  margin-top: 505px;
+  margin-left: calc(50% - 85px);
+  width: 150px;
+  height: 150px;
+  z-index: 1000000000;
+  border-radius: 10000000000000000px;
+}
+
+.navigate-large-shadow {
+  background-color: rgba(71, 0, 95, 0.2);
+  position: absolute;
+  top: 0px;
+  margin-top: 430px;
+  margin-left: calc(50% - 160px);
+  width: 300px;
+  height: 300px;
+  z-index: 1000000000;
+  border-radius: 10000000000000000px;
+}
+
+#startup-code {
+  border-width: 2px;
+  border-color: rebeccapurple;
+  color: rgb(0, 0, 0);
+  background-color: transparent;
+  margin-left: auto;
+  width: 50%;
+  height: 280px;
 }
