--- a/styles/ui.css
+++ b/styles/ui.css
@@ -222,3 +222,24 @@ button:hover {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.search-result {
+  margin-top: 40px;
+}
+
+.search-result a {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px;
+  text-decoration: none;
+  transition: 250ms;
+  color: orchid;
+}
+
+.search-result a:hover {
+  transition: 250ms;
+  cursor: pointer;
+  color: darkorchid;
+  transition: 250ms;
+}
