--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -186,3 +186,25 @@ body {
   background: linear-gradient(0deg, rgba(40,40,40,1) 0%, rgba(40,40,40,1) 0%, rgba(255,255,255,1) 5%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#210024",endColorstr="#ffffff",GradientType=1);
 }
+
+.getstarted-linkcard-image {
+  width: 110px;
+  height: 110px;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  position: relative;
+}
+
+.link-card svg {
+  margin-left: 10px;
+  margin-right: auto;
+  transition: 200ms;
+}
+
+.link-card:hover svg {
+  transition: 200ms;
+  margin-left: 25px;
+}
