--- a/styles/pages/docs.css
+++ b/styles/pages/docs.css
@@ -5,18 +5,21 @@
 .title {
   text-align: left;
   font-family: 'OpenSans-SemiBold';
+  color: rgb(255, 255, 255);
 }
 
 .sub-title {
   text-align: left;
   margin-bottom: 10px;
   font-family: 'OpenSans-SemiBold';
+  color: rgb(255, 255, 255);
 }
 
 .sub-sub-title {
   text-align: left;
   margin-bottom: 10px;
   font-family: 'OpenSans-SemiBold';
+  color: rgb(255, 255, 255);
 }
 
 .page-title {
@@ -25,6 +28,7 @@
   text-align: left;
   margin-bottom: 10px;
   font-family: 'OpenSans-SemiBold';
+  color: rgb(255, 255, 255);
 }
 
 .text {
@@ -32,6 +36,7 @@
   font-weight: normal;
   font-size: 16px;
   text-align: left;
+  color: rgb(200, 200, 200);
 }
 
 a {
