--- a/styles/code.css
+++ b/styles/code.css
@@ -9,8 +9,10 @@
   overflow: auto;
   font-family: 'Code';
   font-size: 15px;
-  border: 2px solid rgb(60, 60, 60);
-  border-radius: 7px;
+  border-style: solid;
+  border-color: rgb(90, 90, 90);;
+  border-width: 1px;
+  border-radius: 5px;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -22,7 +24,9 @@
   white-space: pre-wrap;
   overflow: auto;
   font-family: 'Code';
-  border: 0px none transparent;
+  border-style: none;
+  border-color: transparent;
+  border-width: 0px;
   border-radius: 5px;
   width: fit-content;
   height: fit-content;
