--- a/styles/ui.css
+++ b/styles/ui.css
@@ -363,3 +363,42 @@ button:hover {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
+
+a:hover {
+  cursor: pointer;
+}
+
+.tabcontrol {
+  width: 100%;
+  background-color: transparent;
+  border-bottom-style: solid;
+  border-bottom-color: blueviolet;
+  border-bottom-width: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  user-select: none;
+  color: rgb(220, 220, 220);
+  font-size: 24px;
+  font-weight: normal;
+  display: inline-flex;
+}
+
+.tabcontrol .tab {
+  transition: 250ms;
+  margin-right: 40px;
+}
+
+.tabcontrol .tab.active {
+  color: blueviolet;
+}
+
+.tabcontrol .tab:hover {
+  transition: 250ms;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+}
+
+.tabcontrol-content {
+  margin-top: 40px;
+}
