--- a/styles/ui.css
+++ b/styles/ui.css
@@ -359,7 +359,7 @@ button:hover {
   -webkit-transform: rotate(-135deg);
 }
 
-.arrpw.down {
+.arrow.down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
@@ -401,4 +401,49 @@ a:hover {
 
 .tabcontrol-content {
   margin-top: 40px;
+}
+
+.dropdown {
+	user-select: none;
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown button {
+  font-family: 'OpenSans';
+  margin-bottom: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.dropdown-content {
+  margin-left: 2px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-color: rgb(100, 50, 168);
+  border-style: solid;
+  border-width: 1px;
+}
+
+.dropdown-content a {
+  transition: 0.15s;
+  cursor: pointer;
+  color: black;
+  font-family: 'OpenSans';
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  height: 20px;
+}
+
+.dropdown-content a:hover {
+  transition: 0.15s;
+  background-color: #d3baf3;
+  font-weight: bold;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
