--- a/styles/theme.css
+++ b/styles/theme.css
@@ -73,12 +73,12 @@ body {
 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0px 0px 0px transparent;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: indigo;
+  background: rgb(140, 0, 255);
+  border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: indigo;
-}
+::-webkit-scrollbar-thumb:hover {}
