--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -3,7 +3,7 @@
 */
 
 .navigation {
-  background-color: rgb(0, 0, 0);
+  background-color: transparent;
   width: 100%;
   height: 50px;
   display: flex;
@@ -11,9 +11,10 @@
   text-align: center;
   user-select: none;
   overflow: hidden;
-  top: 0;
+  top: 0px;
 	left: 0;
 	right: 0;
+  margin-top: 10px;
   z-index: 10000000000000000000000000000000;
 }
 
