--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@
 .footer {
   margin-top: auto;
   color: rgb(255, 255, 255);
-  background-color: rgb(59, 29, 79);
+  background-color: rgb(48, 48, 48);
   width: 100%;
   height: 300px;
   display: flex;
@@ -29,7 +29,7 @@
   font-family: 'OpenSans-Light';
   font-weight: bold;
   font-size: large;
-  color: rgb(200, 116, 221);
+  color: silver;
 }
 
 .footer a:hover {
