--- a/styles/ui.css
+++ b/styles/ui.css
@@ -403,13 +403,13 @@ a:hover {
   width: 100%;
   background-color: transparent;
   border-bottom-style: solid;
-  border-bottom-color: blueviolet;
+  border-bottom-color: #FFBB00;
   border-bottom-width: 2px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
   user-select: none;
-  color: rgb(220, 220, 220);
+  color: lightgray;
   font-size: larger;
   font-weight: normal;
   display: inline-flex;
@@ -421,13 +421,13 @@ a:hover {
 }
 
 .tabcontrol .tab.active {
-  color: blueviolet;
+  color: #FFBB00;
 }
 
 .tabcontrol .tab:hover {
   transition: 250ms;
   cursor: pointer;
-  color: rgb(255, 255, 255);
+  color: #FFBB00;
 }
 
 .tabcontrol-content {
