--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 .navigation #navigation-links a:hover {
-  background-color: #FFBB00;
+  background-color: #5F7389;
   color: rgb(255, 255, 255);
 }
 
