--- a/styles/searchbox.css
+++ b/styles/searchbox.css
@@ -9,7 +9,7 @@
   height: 30px;
   border-style: solid;
   border-width: 1px;
-  border-color: goldenrod;
+  border-color: #5F7389;
   border-radius: 100000000000000000000000px;
   margin-top: auto;
   margin-bottom: auto;
@@ -26,7 +26,7 @@
   height: 50px;
   border-style: solid;
   border-width: 1px;
-  border-color: goldenrod;
+  border-color: #5F7389;
   border-radius: 100000000000000000000000px;
   margin-top: auto;
   margin-bottom: auto;
@@ -50,7 +50,7 @@
   margin-right: 10px;
   text-decoration: none;
   outline: none;
-  caret-color: #FFBB00;
+  caret-color: #5F7389;
   border-width: 0px;
   border-style: none;
   border-color: transparent;
